Contenido de portafolio

--- a/index.html
+++ b/index.html
@@ -19,26 +19,19 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>This is<br />
-						Massively</h1>
-						<p>A free, fully responsive HTML5 + CSS3 site template designed by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a><br />
-						and released for free under the <a href="https://html5up.net/license">Creative Commons license</a>.</p>
-						<!-- <ul class="actions">
-							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
-						</ul> -->
+						<h1>Hi, I'm Valentina Hurtado</h1>
+						<p>I program solutions to real life problems using software development tools
+						</p>
 					</div>
 
-				<!-- Header -->
-					<!-- <header id="header">
-						<a href="index.html" class="logo">Massively</a>
-					</header> -->
-
 				<!-- Nav -->
-					<!-- <nav id="nav">
-						<ul class="links">
-							<li class="active"><a href="index.html">This is Massively</a></li>
-						
-					</nav> -->
+					<nav id="nav">
+						<ul class="icons">
+							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="#" class="icon brands fa-envelope"><span class="label">Gmail</span></a></li>
+						</ul>
+					</nav>
 
 				<!-- Main -->
 					<div id="main">
@@ -46,42 +39,55 @@
 							<section class="posts">
 								<article>
 									<header>
-										<h2><a href="#">Proyecto 1</a></h2>
+										<h2><a href="#">Image classification</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="#" class="image"><img src="images/classification.png" alt="" /></a>
+									<p>Python - Tensorflow - Keras - Numpy<br />
+										The Fashion-MNIST dataset from the Tensorflow library, a set of images each associated with a label, is used.<br />
+										A neural network is programmed as an image classification prediction model to predict the label associated with each clothing item.
+									</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">View code</a></li>
+										<li><a href="https://github.com/hurtado1820/RedesNeuronales" class="button">View code</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">Proyecto 2</a></h2>
+										<h2><a href="#">Linear regression</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="#" class="image"><img src="images/linear.png" alt="" /></a>
+									<p>Python - Pandas- Seaborn - Matplotlib<br />
+										We have a dataset with student information, such as gender, education level, test preparation, and the results obtained in mathematics, reading and writing tests.<br/>
+										The correlation between reading and writing test results is analyzed using a linear regression model.
+									</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">View code</a></li>
+										<li><a href="https://github.com/hurtado1820/RegresionLineal" class="button">View code</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">Proyecto 3</a></h2>
+										<h2><a href="#">Logistic regression</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="#" class="image fit"><img src="images/logistic.png" alt="" /></a>
+									<p>Python - Scikit learn - Seaborn - Numpy<br />
+										The digits dataset from the sklearn library, which has images of the digits with their respective number, is used.<br/>
+										A logistic regression model is trained to correctly predict the number associated to each image. 
+									</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">View code</a></li>
+										<li><a href="https://github.com/hurtado1820/RegresionLogistica" class="button">View code</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">Proyecto 4</a></h2>
+										<h2><a href="#">Database</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="#" class="image fit"><img src="images/sql.jpg" alt="" /></a>
+									<p>SQL - MER - MR<br />
+										Database for the traffic department to manage traffic infractions.<br/>
+										It collects information from the automobile companies about their brands and models of cars, as well as their owners.<br/>
+										When an infraction is committed, a fine is imposed on the offender, who may be a pedestrian or a vehicle owner.
+									</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">View code</a></li>
+										<li><a href="https://github.com/hurtado1820/Transito" class="button">View model</a></li>
 									</ul>
 								</article>
 							</section>
@@ -91,32 +97,12 @@
 					<footer id="footer">
 						</ul>
 						<ul class="icons">
-							<p>Donec eget ex magna.</p>
+							<p>If you liked my work, contact me.</p>
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
-						<!-- <section>
-							<form method="post" action="#">
-								<div class="fields">
-									<div class="field">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" />
-									</div>
-									<div class="field">
-										<label for="email">Email</label>
-										<input type="text" name="email" id="email" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="3"></textarea>
-									</div>
-								</div>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</form> -->
 					</footer>
 
 				<!-- Copyright -->
