--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 							<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<li><a href="#" class="icon brands fa-envelope"><span class="label">Gmail</span></a></li>
+							<li><a href="#" class="icon fas fa-envelope"><span class="label">Gmail</span></a></li>
 						</ul>
 					</nav>
 
@@ -37,6 +37,7 @@
 					<div id="main">
 						<!-- Posts -->
 							<section class="posts">
+								<h1>My projects</h1>
 								<article>
 									<header>
 										<h2><a href="#">Image classification</a></h2>
